Added Transactions and CustomQuery
